[package]
name = "rumqtt-reqres"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.7"
uuid = { version = "0.8", features = ["v4"] }
bytes = "1.1"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time"] }