[package]
name = "rumqtt-reqres"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.7"
uuid = { version = "0.8", features = ["v4"] }
bytes = "1.1"
tokio = { version = "1", default-features = false, features = ["sync"] }
log = "0.4"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time"] }
env_logger = "0.9"
futures = "0.3"